2006-12-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/pls as an alias for pls files

2006-12-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the Google Video Pointer mime-types
	(alias'ed to text/google-video-pointer)

2006-12-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add "video/flv" as an alias for FLV videos,
	as used by YouTube's HTTP server

2006-11-14  Christopher Aillon  <caillon@redhat.com>

	* freedesktop.org.xml.in: alias image/pdf to application/pdf

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add RTSPtextRTSP-style movie references
	to the application/x-quicktime-media-link mime-type (see GNOME #302482)

2006-10-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add image/x-macpaint for
	"MacPaint Bitmap image"

2006-08-26  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.latex as a pattern for TeX documents
	(Closes: #6235)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add text/javascript as an alias to
	application/javascript, spotted by Ville Skyttä <ville.skytta@iki.fi>
	(Closes: #6616)

=== shared-mime-info 0.19 ===

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.19

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: patch from Stephane Chauveau
	<spam70@chauveau-central.net> and Eugenia Loli-Queru
	<eloli@hotmail.com> to add many raw image types from digital cameras
	(Closes: #4117)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a mime-type for musepack, patch from
	Pino Toscano <toscano.pino@tiscali.it> (Closes: #6408)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add ECMAScript mime-type
	(application/ecmascript), patch by Ville Skyttä
	<ville.skytta@iki.fi> (Closes: #6616)

2006-08-25  Bastien Nocera  <hadess@hadess.net>
