@@ -668,6 +668,10 @@ command to generate the output files.
       <match type="string" value="BLENDER" offset="0"/>
     </magic>
   </mime-type>
+  <mime-type type="application/x-bzdvi">
+    <_comment>TeX DVI document (bzip-compressed)</_comment>
+    <glob pattern="*.dvi.bz2"/>
+  </mime-type>
   <mime-type type="application/x-bzip">
     <_comment>bzip archive</_comment>
     <magic priority="50">
@@ -682,6 +686,14 @@ command to generate the output files.
     <glob pattern="*.tar.bz2"/>
     <glob pattern="*.tbz"/>
     <glob pattern="*.tbz2"/>
+  </mime-type>
+  <mime-type type="application/x-bzpdf">
+    <_comment>PDF document (bzip-compressed)</_comment>
+    <glob pattern="*.pdf.bz2"/>
+  </mime-type>
+  <mime-type type="application/x-bzpostscript">
+    <_comment>PostScript document (bzip-compressed)</_comment>
+    <glob pattern="*.ps.bz2"/>
   </mime-type>
   <mime-type type="application/x-cbr">
     <sub-class-of type="application/x-rar"/>
@@ -1060,12 +1072,20 @@ command to generate the output files.
       <match type="string" value="gtktalog " offset="4"/>
     </magic>
   </mime-type>
+  <mime-type type="application/x-gzdvi">
+    <_comment>TeX DVI document (gzip-compressed)</_comment>
+    <glob pattern="*.dvi.gz"/>
+  </mime-type>
   <mime-type type="application/x-gzip">
     <_comment>gzip archive</_comment>
     <magic priority="50">
       <match type="string" value="\037\213" offset="0"/>
     </magic>
     <glob pattern="*.gz"/>
+  </mime-type>
+  <mime-type type="application/x-gzpdf">
+    <_comment>PDF document (gzip-compressed)</_comment>
+    <glob pattern="*.pdf.gz"/>
   </mime-type>
   <mime-type type="application/x-gzpostscript">
     <_comment>PostScript document (gzip-compressed)</_comment>
@@ -2275,6 +2295,12 @@ command to generate the output files.
     </magic>
     <glob pattern="*.ag"/>
   </mime-type>
+  <mime-type type="image/x-bzeps">
+    <_comment>EPS image (bzip-compressed)</_comment>
+    <glob pattern="*.eps.bz2"/>
+    <glob pattern="*.epsi.bz2"/>
+    <glob pattern="*.epsf.bz2"/>
+  </mime-type>
   <mime-type type="image/x-cmu-raster">
     <_comment>CMU raster image</_comment>
     <glob pattern="*.ras"/>
@@ -2367,6 +2393,12 @@ command to generate the output files.
     <magic priority="50">
       <match type="big32" value="0x46506978" offset="0"/>
     </magic>
+  </mime-type>
+  <mime-type type="image/x-gzeps">
+    <_comment>EPS image (gzip-compressed)</_comment>
+    <glob pattern="*.eps.gz"/>
+    <glob pattern="*.epsi.gz"/>
+    <glob pattern="*.epsf.gz"/>
   </mime-type>
   <mime-type type="image/x-ico">
     <_comment>ICO icon</_comment>
