@@ -1,3 +1,8 @@
+2006-12-15  Christian Neumair  <chris@gnome-de.org>
+
+	* freedesktop.org.xml.in: Add gzip/bz2 types for DVI, PDF and
+	PostScript. Fixes #4658. Thanks to Bas Zoetekouw <bas@debian.org>
+
 2006-12-11  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add application/pls as an alias for pls files
